--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,27 @@
+arrow==1.3.0
 asgiref==3.8.1
-click==8.1.7
-colorama==0.4.6
-crispy-bootstrap4==2024.10
-crispy-bootstrap5==2024.10
-crispy-tailwind==1.0.3
-cssbeautifier==1.15.1
+binaryornot==0.4.4
+certifi==2024.12.14
+chardet==5.2.0
+charset-normalizer==3.4.0
+click==8.1.8
+cookiecutter==2.6.0
 Django==5.1.4
-django-crispy-forms==2.3
-djlint==1.36.3
-EditorConfig==0.12.4
-jsbeautifier==1.15.1
-json5==0.10.0
-pathspec==0.12.1
+django-tailwind==3.8.0
+idna==3.10
+Jinja2==3.1.5
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+pillow==11.0.0
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
 PyYAML==6.0.2
-regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
 six==1.17.0
-sqlparse==0.5.2
-tqdm==4.67.1
+sqlparse==0.5.3
+text-unidecode==1.3
+types-python-dateutil==2.9.0.20241206
+urllib3==2.3.0
